# rbw

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LOCAL_PIN_CONTEXT.md  Makefile  README.md  deny.toml  flake.nix  justfile
.github/workflows/: release.yml  tests.yaml
src/: actions.rs  agent.rs  api.rs  base64.rs  cipherstring.rs  config.rs  db.rs  dirs.rs  edit.rs  error.rs  identity.rs  json.rs  lib.rs  local_unlock.rs  locked.rs  main.rs  pin.rs  pinentry.rs  prelude.rs  protocol.rs  pwgen.rs  secret.rs  webauthn.rs  wordlist.rs
src/pin/: backend.rs  cli.rs  crypto.rs  flow.rs
src/pin/backend/: age.rs  keyring.rs
tools/: generate_wordlist
